--- a/MAE/Tema_0/Apuntes_R.Rmd
+++ b/MAE/Tema_0/Apuntes_R.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Apuntes Métodos Avanzados en Estadística"
-author: "Alvaro"
+author: "Álvaro José Álvarez Arranz"
 date: "`r format(Sys.Date(), '%d/%m/%Y')`"
 output: pdf_document
 ---
