--- a/MAE/Tema_0/Repaso_probabilidad.Rmd
+++ b/MAE/Tema_0/Repaso_probabilidad.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Repaso probabilidad"
-author: "Alvaro"
+author: "Álvaro José Álvarez Arranz"
 date: "`r format(Sys.Date(), '%d/%m/%Y')`"
 output: pdf_document
 ---
